// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolvers are generated correctly 1`] = `
{
  "Mutation": {
    "createSomeObject": [Function],
    "deleteAnotherObject": [Function],
    "deleteSomeObject": [Function],
    "restoreAnotherObject": [Function],
    "restoreSomeObject": [Function],
    "updateSomeObject": [Function],
  },
  "Query": {
    "anotherObjects": [Function],
    "manyObjects": [Function],
    "me": [Function],
    "someObject": [Function],
  },
}
`;

exports[`resolvers resolve lists, many-to-one and one-to-many queries 1`] = `
{
  "data": {
    "manyObjects": [
      {
        "another": {
          "id": "bar",
          "manyObjects": [
            {
              "field": "foo",
              "id": "foo",
            },
          ],
        },
        "field": "foo",
        "id": "foo",
      },
    ],
  },
}
`;

exports[`resolvers resolve lists, many-to-one and one-to-many queries: query 1`] = `"select * from "User" where "id" = $1 limit $2"`;

exports[`resolvers resolve lists, many-to-one and one-to-many queries: query 2`] = `"select "SO"."id" as "SO__ID", "SO"."id" as "SO__id", "SO"."field" as "SO__field", "SO__a"."id" as "SO__a__ID", "SO__a"."id" as "SO__a__id" from "SomeObject" as "SO" left join "AnotherObject" as "SO__W__a" on "SO"."anotherId" = "SO__W__a"."id" left join "AnotherObject" as "SO__a" on "SO"."anotherId" = "SO__a"."id" where "SO__W__a"."id" in ($1) and "SO"."deleted" = $2 order by "SO"."xyz" DESC"`;

exports[`resolvers resolve lists, many-to-one and one-to-many queries: query 3`] = `"select "SO__a__mO"."id" as "SO__a__mO__ID", "SO__a__mO"."id" as "SO__a__mO__id", "SO__a__mO"."field" as "SO__a__mO__field", "SO__a__mO"."anotherId" as "SO__a__mO__anotherId" from "SomeObject" as "SO__a__mO" where "SO__a__mO"."id" in ($1) and "SO__a__mO"."deleted" = $2 and "SO__a__mO"."anotherId" = $3 order by "SO__a__mO"."createdAt" DESC"`;

exports[`resolvers resolve single query 1`] = `
{
  "data": {
    "someObject": {
      "field": "foo",
      "id": "foo",
    },
  },
}
`;

exports[`resolvers resolve single query: query 1`] = `"select * from "User" where "id" = $1 limit $2"`;

exports[`resolvers resolve single query: query 2`] = `"select "SO"."id" as "SO__ID", "SO"."id" as "SO__id", "SO"."field" as "SO__field" from "SomeObject" as "SO" where "SO"."id" = $1 and "SO"."deleted" = $2 order by "SO"."createdAt" DESC limit $3"`;
